--- a/layouts/partials/site/favicon.html
+++ b/layouts/partials/site/favicon.html
@@ -2,8 +2,8 @@
 <link rel="icon" type="image/png" sizes="32x32" href="{{ "/favicon-32x32.png" | relURL }}">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ "/favicon-16x16.png" | relURL }}">
 <link rel="manifest" href="{{ "/site.webmanifest" | relURL }}">
-<link rel="mask-icon" href="{{ "/safari-pinned-tab.svg" | relURL }}" color="{{ $.Site.Params.themeColor }}">
-<meta name="apple-mobile-web-app-title" content="{{ $.Site.Title }}">
-<meta name="application-name" content="{{ $.Site.Title }}">
-<meta name="msapplication-TileColor" content="{{ $.Site.Params.colors.theme }}">
-<meta name="theme-color" content="{{ $.Site.Params.colors.background }}">
+<link rel="mask-icon" href="{{ "/safari-pinned-tab.svg" | relURL }}" color="{{ site.Params.themeColor }}">
+<meta name="apple-mobile-web-app-title" content="{{ site.Title }}">
+<meta name="application-name" content="{{ site.Title }}">
+<meta name="msapplication-TileColor" content="{{ site.Params.colors.theme }}">
+<meta name="theme-color" content="{{ site.Params.colors.background }}">
