--- a/layouts/partials/site/scripts.html
+++ b/layouts/partials/site/scripts.html
@@ -1,2 +1,3 @@
-{{ $js := resources.Get "js/main.js" | resources.Minify | resources.Fingerprint "sha512" }}
-<script src="{{ $js.Permalink }}" integrity="{{ $js.Data.Integrity }}"></script>
+{{- with resources.Get "js/main.js" | resources.Minify | resources.Fingerprint "sha512" -}}
+<script src="{{ .Permalink }}" integrity="{{ .Data.Integrity }}"></script>
+{{- end -}}
