Improve template readability

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -8,9 +8,9 @@
             {{- i18n "pageNotFoundAction" . -}}
         </p>
         <p>
-            <a href="{{ $.Site.Home.RelPermalink }}" title='{{ i18n "homepage" }}'>{{ i18n "homepage" }}</a>
+            <a href='{{ relref page "/" }}' title='{{ i18n "homepage" }}'>{{ i18n "homepage" }}</a>
             •
-            <a href='{{ relref . "/imprint" }}' title='{{ i18n "contact" }}'>{{ i18n "contact" }}</a>
+            <a href='{{ relref page "/imprint" }}' title='{{ i18n "contact" }}'>{{ i18n "contact" }}</a>
         </p>
     </article>
 {{ end }}
